--- a/App.razor
+++ b/App.razor
@@ -29,7 +29,8 @@ and uncomment the below line. (See also: https://docs.microsoft.com/en-us/aspnet
         PLabel label1 = new PLabel("One");
         PLabel label2 = new PLabel("TwoTwoTwo");
         PLabel label3= new PLabel("Three");
-        VerticalLayout hl = new VerticalLayout();
+        HTMLContainerWrapper<VerticalLayoutInfo> hl = 
+            new HTMLContainerWrapper<VerticalLayoutInfo>(new VerticalLayout());
         hl.Add(label1);
         hl.Add(label2);
         hl.Add(label3);
