--- a/App.razor
+++ b/App.razor
@@ -28,9 +28,10 @@ and uncomment the below line. (See also: https://docs.microsoft.com/en-us/aspnet
         ProteusContext.SetRuntime(jsRuntime);
         PLabel label1 = new PLabel("One");
         PLabel label2 = new PLabel("TwoTwoTwo");
+        label2.BackgroundColor = 0x00000FFFF;
         PLabel label3= new PLabel("Three");
-        HTMLContainerWrapper<VerticalLayoutInfo> hl = 
-            new HTMLContainerWrapper<VerticalLayoutInfo>(new VerticalLayout());
+        PVerticalLayout hl =
+            new PVerticalLayout();
         hl.Add(label1);
         hl.Add(label2);
         hl.Add(label3);
