Added NaturalSize, Preferred size is now the alrger of NaturalSize and OverrideSize -- add MinSize?

--- a/App.razor
+++ b/App.razor
@@ -33,8 +33,13 @@ and uncomment the below line. (See also: https://docs.microsoft.com/en-us/aspnet
  
         PVerticalLayout hl =
             new PVerticalLayout();
+
+        PWindow window = new PWindow("icons/Window_Frame.png",
+            new Insets(36,8,8,8));
+        window.OverrideSize = new Size(200, 200);
      
         hl.Add(buttontest);
+        hl.Add(window);
        
         hl.Layout( new Point(0, 0), new Size(1024, 800));
         hl.Render(new Matrix(Matrix4x4.Identity));
